force-app/main/default/objects/Property_Valuation__c/Property_Valuation__c.object-meta.xml
<CustomObject>
    <description>Property Valuation</description>
    <label>Property Valuation</label>
    <nameField>
        <displayFormat>PV-{00000}</displayFormat>
        <label>Property Valuation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Valuations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>