force-app/main/default/objects/Property_Valuation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Property Valuations</relationshipLabel>
    <relationshipName>Property_Valuations</relationshipName>
    <type>Lookup</type>
</CustomField>