force-app/main/default/objects/Property_Valuation__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Property Valuations</relationshipLabel>
    <relationshipName>Property_Valuations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>