force-app/main/default/objects/Property_Valuation__c/fields/Renovation_Increase_in_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Increase_in_Property_Value__c</fullName>
    <label>Renovation - Increase in Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>