force-app/main/default/objects/Property_Valuation__c/fields/Valuation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Fee__c</fullName>
    <label>Valuation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>