force-app/main/default/objects/Property_Valuation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Valuation_Reference_Number__c</columns>
    <columns>Market_Value__c</columns>
    <columns>Valuation_Fee__c</columns>
    <columns>Valuation_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Valuations</label>
</ListView>